--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "bcrypt": "^5.0.1",
     "joi": "^17.6.0",
     "mongoose": "^6.4.0",
@@ -37,7 +38,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
