--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/joi": "^17.2.3",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
